[package]
name = "lcsrs"
version = "0.1.0"
edition = "2024"
description = "anki-esque spaced repetition for leetcode practice"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
